--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -12,7 +12,9 @@
                            data-activates="dropdown-header"><span
                             translate="navbar.concept"></span> <i class="material-icons right">arrow_drop_down</i></a>
                     </li>
+                    <!-- MODE GRATUIT, A DECOMMENTER SI REACTIVATION PAYANT
                     <li><a href="#/pricing" translate="navbar.pricing"/></li>
+                    -->
                     <li><a href="#/about" translate="navbar.aboutUs"/></li>
                     <li><a href="#/blog" translate="navbar.news"/></li>
                 </ul>
