--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -10,12 +10,12 @@
     <div class="row">
         <div class="col s12">
             <div class="card">
-                <div class="card-content center-align dark-primary-color">
+                <div class="card-content center-align default-primary-color">
                     <span class="card-content title" translate="profileMainPage.tabs.account"></span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
-                        <div class="col m4 s12">
+                        <div class="col m6 s12">
                             <br/>
                             <a href="#/private/profile/writeProfile" class="waves-effect waves-light accent-text-color">
                                 <i class="material-icons md-48">account_box</i>
@@ -25,7 +25,7 @@
                             <br/>
                         </div>
 
-                        <div class="col m4 s12">
+                        <div class="col m6 s12">
                             <br/>
                             <a href="#/private/profile/changePwd" class="waves-effect waves-light accent-text-color">
                                 <i class="material-icons md-48">https</i>
@@ -34,7 +34,7 @@
                             {{'profileMainPage.tabs.password' | translate }}
                             <br/>
                         </div>
-
+                        <!--
                         <div class="col m4 s12">
                             <br/>
                             <a href="#/private/billing" class="waves-effect waves-light accent-text-color">
@@ -44,16 +44,16 @@
                             {{'profileMainPage.tabs.billing' | translate }}
                             <br/>
                         </div>
-
+                        -->
                     </div>
                 </div>
             </div>
         </div>
             
             
-        <div class="col m6 s12">
+        <div class="col s12">
              <div class="card">
-                <div class="card-content center-align dark-primary-color">
+                <div class="card-content center-align default-primary-color">
                     <span class="card-content title">{{'profileMainPage.tabs.sandbox' | translate }}</span>
                 </div>
                 <div class="card-content center-align">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        
+        <!--
         <div class="col m6 s12">
              <div class="card light-primary-color">
                 <div class="card-content center-align dark-primary-color">
@@ -112,6 +112,6 @@
                 </div>
             </div>
         </div>
-        
+        -->
     </div>
 </div>
