--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -24,7 +24,7 @@
                     <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"
                            rel="noopener"><img src="assets/images/facebook.png" class="social-icon" alt="icon"></a></li>
                     <li>
-                        <a href="#/pricing" class="waves-effect waves-white secondary-color"
+                        <a href="#/signupStartCoach" class="waves-effect waves-white secondary-color"
                            translate="navbar.signup"></a>
                     </li>
                     <li>
@@ -63,8 +63,7 @@
                     <li><a href="#/about" class="white-text" translate="navbar.aboutUs"/></li>
                     <li><a href="#/blog" class="white-text" translate="navbar.news"/></li>
                     <li>
-                        <a href="javascript:void(0)" class="waves-effect waves-white secondary-color"
-                           ng-click="openSignup()"
+                        <a href="#/signupStartCoach" class="waves-effect waves-white secondary-color"
                            translate="navbar.signup"></a>
                     </li>
                     <li>
