--- a/src/app/components/directives/agenda/filter/calendar.html
+++ b/src/app/components/directives/agenda/filter/calendar.html
@@ -10,17 +10,17 @@
 
 
         <!-- Month Navigation-->
-        <div class="col s1 center" ng-if="periodicity=='month'">
+        <div class="col s1 center" ng-if="periodicity==='month'">
             <a href="" ng-click="previousMonth()" class="btn-floating dark-primary-color waves-effect waves-white">
                 <i class="material-icons">chevron_left</i>
             </a>
         </div>
 
-        <div class="col s6 center" ng-if="periodicity=='month'">
+        <div class="col s6 center" ng-if="periodicity==='month'">
             <h5 class="primary-color-text" ng-bind="periodicityActive.label"></h5>
         </div>
 
-        <div class="col s1 center" ng-if="periodicity=='month'">
+        <div class="col s1 center" ng-if="periodicity==='month'">
             <a href="" ng-click="nextMonth()" class="btn-floating dark-primary-color waves-effect waves-white">
                 <i class="material-icons">chevron_right</i>
             </a>
@@ -28,17 +28,17 @@
 
 
         <!-- Quarter Navigation-->
-        <div class="col s1 center" ng-if="periodicity=='quarter'">
+        <div class="col s1 center" ng-if="periodicity==='quarter'">
             <a href="" ng-click="previousQuarter()" class="btn-floating dark-primary-color waves-effect waves-white">
                 <i class="material-icons">chevron_left</i>
             </a>
         </div>
 
-        <div class="col s6 center" ng-if="periodicity=='quarter'">
+        <div class="col s6 center" ng-if="periodicity==='quarter'">
             <h5 class="primary-color-text" ng-bind="periodicityActive.label"></h5>
         </div>
 
-        <div class="col s1 center" ng-if="periodicity=='quarter'">
+        <div class="col s1 center" ng-if="periodicity==='quarter'">
             <a href="" ng-click="nextQuarter()" class="btn-floating dark-primary-color waves-effect waves-white">
                 <i class="material-icons">chevron_right</i>
             </a>
@@ -46,17 +46,17 @@
 
 
         <!-- Season Navigation-->
-        <div class="col s1 center" ng-if="periodicity=='season'">
+        <div class="col s1 center" ng-if="periodicity==='season'">
             <a href="" ng-click="previousSeason()" class="btn-floating dark-primary-color waves-effect waves-white">
                 <i class="material-icons">chevron_left</i>
             </a>
         </div>
 
-        <div class="col s6 center" ng-if="periodicity=='season'">
+        <div class="col s6 center" ng-if="periodicity==='season'">
             <h5 class="primary-color-text" ng-bind="periodicityActive.label"></h5>
         </div>
 
-        <div class="col s1 center" ng-if="periodicity=='season'">
+        <div class="col s1 center" ng-if="periodicity==='season'">
             <a href="" ng-click="nextSeason()" class="btn-floating dark-primary-color waves-effect waves-white">
                 <i class="material-icons">chevron_right</i>
             </a>
@@ -78,13 +78,13 @@
 
 
     <!-- Month Navigation-->
-    <div class="col s6 center" ng-if="periodicity=='month'">
+    <div class="col s6 center" ng-if="periodicity==='month'">
         <a href="" ng-click="previousMonth()" class="btn-floating dark-primary-color waves-effect waves-white">
             <i class="material-icons">chevron_left</i>
         </a>
     </div>
     
-    <div class="col s6center" ng-if="periodicity=='month'">
+    <div class="col s6center" ng-if="periodicity==='month'">
         <a href="" ng-click="nextMonth()" class="btn-floating dark-primary-color waves-effect waves-white">
             <i class="material-icons">chevron_right</i>
         </a>
@@ -92,7 +92,7 @@
     
     <div class="col s12 center" >&nbsp;</div>
 
-    <div class="col s12 center" ng-if="periodicity=='month'">
+    <div class="col s12 center" ng-if="periodicity==='month'">
         <h5 class="primary-color-text" ng-bind="periodicityActive.label"></h5>
     </div>
 
@@ -100,13 +100,13 @@
 
 
     <!-- Quarter Navigation-->
-    <div class="col s6 center" ng-if="periodicity=='quarter'">
+    <div class="col s6 center" ng-if="periodicity==='quarter'">
         <a href="" ng-click="previousQuarter()" class="btn-floating dark-primary-color waves-effect waves-white">
             <i class="material-icons">chevron_left</i>
         </a>
     </div>
     
-    <div class="col s6 center" ng-if="periodicity=='quarter'">
+    <div class="col s6 center" ng-if="periodicity==='quarter'">
         <a href="" ng-click="nextQuarter()" class="btn-floating dark-primary-color waves-effect waves-white">
             <i class="material-icons">chevron_right</i>
         </a>
@@ -114,7 +114,7 @@
     
     <div class="col s12 center" >&nbsp;</div>
 
-    <div class="col s12 center" ng-if="periodicity=='quarter'">
+    <div class="col s12 center" ng-if="periodicity==='quarter'">
         <h5 class="primary-color-text" ng-bind="periodicityActive.label"></h5>
     </div>
 
@@ -122,13 +122,13 @@
 
 
     <!-- Season Navigation-->
-    <div class="col s6 center" ng-if="periodicity=='season'">
+    <div class="col s6 center" ng-if="periodicity==='season'">
         <a href="" ng-click="previousSeason()" class="btn-floating dark-primary-color waves-effect waves-white">
             <i class="material-icons">chevron_left</i>
         </a>
     </div>
     
-    <div class="col s6 center" ng-if="periodicity=='season'">
+    <div class="col s6 center" ng-if="periodicity==='season'">
         <a href="" ng-click="nextSeason()" class="btn-floating dark-primary-color waves-effect waves-white">
             <i class="material-icons">chevron_right</i>
         </a>
@@ -136,7 +136,7 @@
     
     <div class="col s12 center" >&nbsp;</div>
 
-    <div class="col s12 center" ng-if="periodicity=='season'">
+    <div class="col s12 center" ng-if="periodicity==='season'">
         <h5 class="primary-color-text" ng-bind="periodicityActive.label"></h5>
     </div>
 
