--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -2,9 +2,12 @@
     <div class="row"></div>
     
     <title-page-bar icon="person" title="{{player.firstname}} {{player.name}}"></title-page-bar>
-    
+    <!-- 
+        *****************************************************************************
+        Pour l'instant ne pas permettre de modifier un joueur sur l'application web.
+        *****************************************************************************
+        
     <div class="row card">
-        <!--card-->
         <div class="col m12 s12">
             <input type="checkbox" ng-model="showDetail" />
             <span class="card-title activator accent-text-color" ng-click="showDetail = !showDetail">
@@ -19,6 +22,7 @@
             </div>
         </div>
     </div>
+    -->
     <div class="row card">
         <!--card-->
         <div class="col m12 s12 animated fadeIn">
