--- a/src/app/modules/sandbox/effective/team/viewTeam.html
+++ b/src/app/modules/sandbox/effective/team/viewTeam.html
@@ -2,8 +2,11 @@
     <div class="row"></div>
     <title-page-bar icon="group" title="{{team.label}}"></title-page-bar>
     
+    <!-- 
+        *****************************************************************************
+        Pour l'instant ne pas permettre de modifier une équipe sur l'application web.
+        *****************************************************************************
     <div class="row card">
-        <!--card-->
         <div class="col m12 s12">
             <input type="checkbox" ng-model="showDetail" />
             <span class="card-title activator accent-text-color" ng-click="showDetail = !showDetail">
@@ -18,6 +21,7 @@
             </div>
         </div>
     </div>
+    -->
     <div class="row card">
         <!--card-->
         <div class="col m12 s12 animated fadeIn">
