--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -3,16 +3,17 @@
     <!-- space between header menu and body-->
     <div class="row"></div>
 
-    <!-- Entete -->
-
+    <!-- header -->
     <title-page-bar icon="account_box" title="profilePage.title"></title-page-bar>
 
     <div class="row">
         <div class="col s12">
             <div class="row dark-primary-color center">
-                <div class="col m3 s12 center">
+                <div class="col m3 s12 center avatar-wrapper">
+                    <div class="avatar">
                     <avatar person="user" width="'80px'" collection="User"></avatar>
                     <span class="small" translate="profilePage.form.label.avatar"></span>
+                    </div>
                 </div>
                 <div class="col m7 s12">
                     <br/>
@@ -50,9 +51,9 @@
                         <!-- e-mail on Small -->
                         <div class="row hide-on-med-and-up">
                             <div class="col s12">
-                                <label for="email">{{'profilePage.form.label.email' | translate }} <span
+                                <label for="email2">{{'profilePage.form.label.email' | translate }} <span
                                         class="accent-text-color">*</span></label>
-                                <input type="email" id="email" name="email" autocomplete="email"
+                                <input type="email" id="email2" name="email" autocomplete="email"
                                        ng-pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
                                        class="validate"
                                        required ng-model="user.contact.email"
